--- a/app_16.css
+++ b/app_16.css
@@ -14,6 +14,7 @@ body #section .container .item:is(.item:nth-child(3),.item:nth-child(6),.item:nt
 body #section .container .item:is(.item:nth-child(7),.item:nth-child(8),.item:nth-child(9)){border-bottom: none;}
 body #section .container .item:is(.item:nth-child(1),.item:nth-child(4),.item:nth-child(7)){border-left: none;}
 body #section .container .item > span{font-weight: bold;font-size: 7em;color: rgb(0, 0, 0, .11);}
+body #section .container .item > span::selection{background-color: transparent;}
 body #section .container .item > span.active{color: rgb(0, 0, 0, .8);}
 body #section p.playerTurn{text-align: center;color: rgb(0, 0, 0);font-size: 1.5em;}
 body #popUp{width: 100vw;min-height: 100vh;position: absolute;top:0px;left: 0px; background-color: rgba(0, 0, 0, .9);display: none;flex-direction: column; justify-content: center;align-items: center;}
